--- a/package.json
+++ b/package.json
@@ -18,9 +18,17 @@
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.1000.5",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
+    "angularfire2": "^5.4.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase": "^7.17.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "web-push": "^3.4.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -28,9 +36,9 @@
     "@angular/cli": "~8.3.24",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.10.62",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
